generalizing lstm mlflow training

--- a/notebooks/202208_spiral_raw_multiclass_fcnn.ipynb
+++ b/notebooks/202208_spiral_raw_multiclass_fcnn.ipynb
@@ -14,12 +14,12 @@
     "from utils import plot_report\n",
     "\n",
     "import pandas as pd\n",
-    "import matplotlib as mpl\n",
-    "mpl.rcParams['figure.figsize'] = [20.0, 20.0]\n",
-    "HDFStore=pd.HDFStore\n",
     "\n",
-    "from matplotlib import pyplot as plt\n",
     "%matplotlib inline\n",
+    "from matplotlib import pyplot as plt\n",
+    "plt.rcParams['figure.figsize'] = [20.0, 20.0]\n",
+    "\n",
+    "\n",
     "\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -102,29 +102,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>C104_2</th>\n",
-       "      <td>6421</td>\n",
-       "      <td>7368</td>\n",
+       "      <th>C07_1</th>\n",
+       "      <td>4685</td>\n",
+       "      <td>2561</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>T015</th>\n",
-       "      <td>5879</td>\n",
-       "      <td>7787</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>C08</th>\n",
-       "      <td>5197</td>\n",
-       "      <td>3373</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>C104_1</th>\n",
-       "      <td>5110</td>\n",
-       "      <td>3572</td>\n",
+       "      <th>T011_2</th>\n",
+       "      <td>5519</td>\n",
+       "      <td>7730</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>T023_2</th>\n",
-       "      <td>5240</td>\n",
-       "      <td>9310</td>\n",
+       "      <td>4410</td>\n",
+       "      <td>7790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C01_2</th>\n",
+       "      <td>5812</td>\n",
+       "      <td>8098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C104_1</th>\n",
+       "      <td>6492</td>\n",
+       "      <td>2881</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -133,11 +133,11 @@
       "text/plain": [
        "               x     y\n",
        "subject_id            \n",
-       "C104_2      6421  7368\n",
-       "T015        5879  7787\n",
-       "C08         5197  3373\n",
-       "C104_1      5110  3572\n",
-       "T023_2      5240  9310"
+       "C07_1       4685  2561\n",
+       "T011_2      5519  7730\n",
+       "T023_2      4410  7790\n",
+       "C01_2       5812  8098\n",
+       "C104_1      6492  2881"
       ]
      },
      "execution_count": 3,
@@ -206,7 +206,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f39bf01d910>]"
+       "[<matplotlib.lines.Line2D at 0x7fd477465fd0>]"
       ]
      },
      "execution_count": 6,
@@ -574,13 +574,7 @@
       "1/1 [==============================] - 0s 7ms/step - loss: 11.5327 - accuracy: 0.2571 - val_loss: 14.3272 - val_accuracy: 0.1111\n",
       "Epoch 52/1000\n",
       "1/1 [==============================] - 0s 8ms/step - loss: 11.5327 - accuracy: 0.2571 - val_loss: 14.3272 - val_accuracy: 0.1111\n",
-      "Epoch 53/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 53/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: 11.5327 - accuracy: 0.2571 - val_loss: 14.3272 - val_accuracy: 0.1111\n",
       "Epoch 54/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: 11.5327 - accuracy: 0.2571 - val_loss: 14.3272 - val_accuracy: 0.1111\n",
@@ -1089,13 +1083,7 @@
       "1/1 [==============================] - 0s 7ms/step - loss: 4.2338 - accuracy: 0.5143 - val_loss: 4.1209 - val_accuracy: 0.6667\n",
       "Epoch 52/1000\n",
       "1/1 [==============================] - 0s 9ms/step - loss: 4.2338 - accuracy: 0.5143 - val_loss: 4.1209 - val_accuracy: 0.6667\n",
-      "Epoch 53/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 53/1000\n",
       "1/1 [==============================] - 0s 8ms/step - loss: 4.2338 - accuracy: 0.5143 - val_loss: 4.1209 - val_accuracy: 0.6667\n",
       "Epoch 54/1000\n",
       "1/1 [==============================] - 0s 8ms/step - loss: 4.2338 - accuracy: 0.5143 - val_loss: 4.1209 - val_accuracy: 0.6667\n",
@@ -1604,13 +1592,7 @@
       "1/1 [==============================] - 0s 7ms/step - loss: 4.2188 - accuracy: 0.4857 - val_loss: 4.1209 - val_accuracy: 0.6667\n",
       "Epoch 50/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: 4.2188 - accuracy: 0.4857 - val_loss: 4.1209 - val_accuracy: 0.6667\n",
-      "Epoch 51/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 51/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: 4.2188 - accuracy: 0.4857 - val_loss: 4.1209 - val_accuracy: 0.6667\n",
       "Epoch 52/1000\n",
       "1/1 [==============================] - 0s 8ms/step - loss: 4.2188 - accuracy: 0.4857 - val_loss: 4.1209 - val_accuracy: 0.6667\n",
@@ -2136,13 +2118,7 @@
       "1/1 [==============================] - 0s 8ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
       "Epoch 50/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
-      "Epoch 51/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 51/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
       "Epoch 52/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
@@ -2390,13 +2366,7 @@
       "1/1 [==============================] - 0s 7ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
       "Epoch 171/1000\n",
       "1/1 [==============================] - 0s 6ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
-      "Epoch 172/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 172/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
       "Epoch 173/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
@@ -2700,13 +2670,7 @@
       "1/1 [==============================] - 0s 7ms/step - loss: 4.2786 - accuracy: 0.4857 - val_loss: 4.1802 - val_accuracy: 0.6667\n",
       "Epoch 50/1000\n",
       "1/1 [==============================] - 0s 9ms/step - loss: 4.2781 - accuracy: 0.4857 - val_loss: 4.1800 - val_accuracy: 0.6667\n",
-      "Epoch 51/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 51/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: 4.2779 - accuracy: 0.4857 - val_loss: 4.1794 - val_accuracy: 0.6667\n",
       "Epoch 52/1000\n",
       "1/1 [==============================] - 0s 8ms/step - loss: 4.2773 - accuracy: 0.4857 - val_loss: 4.1783 - val_accuracy: 0.6667\n",
@@ -3363,13 +3327,7 @@
       "1/1 [==============================] - 0s 8ms/step - loss: 4.8003 - accuracy: 0.4857 - val_loss: 4.7000 - val_accuracy: 0.6667\n",
       "Epoch 49/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: 4.8095 - accuracy: 0.4857 - val_loss: 4.6977 - val_accuracy: 0.6667\n",
-      "Epoch 50/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 50/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: 4.8072 - accuracy: 0.4857 - val_loss: 4.6954 - val_accuracy: 0.6667\n",
       "Epoch 51/1000\n",
       "1/1 [==============================] - 0s 8ms/step - loss: 4.3642 - accuracy: 0.4857 - val_loss: 4.6930 - val_accuracy: 0.6667\n",
@@ -4215,13 +4173,7 @@
       "1/1 [==============================] - 0s 7ms/step - loss: 4.0865 - accuracy: 0.4857 - val_loss: 4.4059 - val_accuracy: 0.6667\n",
       "Epoch 454/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: 4.5153 - accuracy: 0.4857 - val_loss: 4.4058 - val_accuracy: 0.6667\n",
-      "Epoch 455/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 455/1000\n",
       "1/1 [==============================] - 0s 8ms/step - loss: 4.5038 - accuracy: 0.4857 - val_loss: 4.4058 - val_accuracy: 0.6667\n",
       "Epoch 456/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: 4.5037 - accuracy: 0.4857 - val_loss: 4.4057 - val_accuracy: 0.6667\n",
@@ -5961,13 +5913,7 @@
       "1/1 [==============================] - 0s 8ms/step - loss: 0.4107 - accuracy: 0.9143 - val_loss: 0.7408 - val_accuracy: 0.6111\n",
       "Epoch 217/1000\n",
       "1/1 [==============================] - 0s 10ms/step - loss: 0.4565 - accuracy: 0.8286 - val_loss: 0.7252 - val_accuracy: 0.6111\n",
-      "Epoch 218/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 218/1000\n",
       "1/1 [==============================] - 0s 10ms/step - loss: 0.4141 - accuracy: 0.8286 - val_loss: 0.6966 - val_accuracy: 0.6111\n",
       "Epoch 219/1000\n",
       "1/1 [==============================] - 0s 10ms/step - loss: 0.4298 - accuracy: 0.8857 - val_loss: 0.6738 - val_accuracy: 0.6111\n",
@@ -6445,13 +6391,7 @@
       "1/1 [==============================] - 0s 8ms/step - loss: 0.2183 - accuracy: 1.0000 - val_loss: 0.6554 - val_accuracy: 0.7778\n",
       "Epoch 447/1000\n",
       "1/1 [==============================] - 0s 9ms/step - loss: 0.2575 - accuracy: 0.9714 - val_loss: 0.6275 - val_accuracy: 0.7778\n",
-      "Epoch 448/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 448/1000\n",
       "1/1 [==============================] - 0s 8ms/step - loss: 0.2615 - accuracy: 0.9714 - val_loss: 0.5873 - val_accuracy: 0.7778\n",
       "Epoch 449/1000\n",
       "1/1 [==============================] - 0s 8ms/step - loss: 0.2213 - accuracy: 0.9429 - val_loss: 0.5774 - val_accuracy: 0.7222\n",
@@ -6816,13 +6756,7 @@
       "1/1 [==============================] - 0s 114ms/step - loss: 1.0460 - accuracy: 0.5143 - val_loss: 1.0902 - val_accuracy: 0.2778\n",
       "Epoch 50/1000\n",
       "1/1 [==============================] - 0s 116ms/step - loss: 1.0443 - accuracy: 0.5143 - val_loss: 1.0885 - val_accuracy: 0.2778\n",
-      "Epoch 51/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 51/1000\n",
       "1/1 [==============================] - 0s 116ms/step - loss: 1.0421 - accuracy: 0.5143 - val_loss: 1.0858 - val_accuracy: 0.2778\n",
       "Epoch 52/1000\n",
       "1/1 [==============================] - 0s 115ms/step - loss: 1.0396 - accuracy: 0.5143 - val_loss: 1.0832 - val_accuracy: 0.2778\n",
@@ -7895,13 +7829,7 @@
       "1/1 [==============================] - 0s 220ms/step - loss: 0.6415 - accuracy: 0.6286 - val_loss: 0.7732 - val_accuracy: 0.8889\n",
       "Epoch 104/1000\n",
       "1/1 [==============================] - 0s 224ms/step - loss: 0.6253 - accuracy: 0.6571 - val_loss: 0.7744 - val_accuracy: 0.8889\n",
-      "Epoch 105/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 105/1000\n",
       "1/1 [==============================] - 0s 223ms/step - loss: 0.5625 - accuracy: 0.7143 - val_loss: 0.7756 - val_accuracy: 0.8889\n",
       "Epoch 106/1000\n",
       "1/1 [==============================] - 0s 225ms/step - loss: 0.6346 - accuracy: 0.6857 - val_loss: 0.7765 - val_accuracy: 0.8889\n",
@@ -8915,13 +8843,7 @@
       "1/1 [==============================] - 0s 258ms/step - loss: 0.5914 - accuracy: 0.8571 - val_loss: 0.9436 - val_accuracy: 0.6667\n",
       "Epoch 96/1000\n",
       "1/1 [==============================] - 0s 262ms/step - loss: 0.5474 - accuracy: 0.9143 - val_loss: 0.9420 - val_accuracy: 0.6667\n",
-      "Epoch 97/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 97/1000\n",
       "1/1 [==============================] - 0s 262ms/step - loss: 0.5625 - accuracy: 0.8857 - val_loss: 0.9404 - val_accuracy: 0.6667\n",
       "Epoch 98/1000\n",
       "1/1 [==============================] - 0s 275ms/step - loss: 0.5564 - accuracy: 0.9429 - val_loss: 0.9436 - val_accuracy: 0.6667\n",
