--- a/notebooks/202208_spiral_rd_binary_fcnn.ipynb
+++ b/notebooks/202208_spiral_rd_binary_fcnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>0</th>\n",
        "      <th>1</th>\n",
        "      <th>2</th>\n",
@@ -115,30 +115,6 @@
        "      <th>4093</th>\n",
        "      <th>4094</th>\n",
        "      <th>4095</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>subject_id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -388,21 +364,19 @@
        "</div>"
       ],
       "text/plain": [
-       "              0           1          2          3          4          5  \\\n",
-       "subject_id                                                                \n",
-       "C01_1       0.0  139.606018  12.253823  74.690512  11.408070  53.418940   \n",
-       "C01_2       0.0  177.624753   0.348489  98.753315   1.625123  65.488730   \n",
-       "C02_1       0.0  165.150944  75.170220  60.824241  79.705065   1.594562   \n",
-       "C02_2       0.0  173.554782  12.574759  98.943861   6.678424  54.118429   \n",
-       "C03_1       0.0  166.058937   8.162449  90.288484   7.655655  63.642081   \n",
-       "C03_2       0.0  180.359529  41.200908  86.240933  48.963521  45.659225   \n",
-       "C04_1       0.0  161.031038  40.035450  75.208474  46.378921  37.164575   \n",
-       "C04_2       0.0  110.061879  99.067986  40.937046  12.905609  44.446037   \n",
-       "C05_1       0.0  148.984471  57.586698  53.911191  59.539912   8.614326   \n",
-       "C05_2       0.0  160.759357  55.402610  63.358692  62.059709  22.435951   \n",
+       "Unnamed: 0  0           1          2          3          4          5     \\\n",
+       "C01_1        0.0  139.606018  12.253823  74.690512  11.408070  53.418940   \n",
+       "C01_2        0.0  177.624753   0.348489  98.753315   1.625123  65.488730   \n",
+       "C02_1        0.0  165.150944  75.170220  60.824241  79.705065   1.594562   \n",
+       "C02_2        0.0  173.554782  12.574759  98.943861   6.678424  54.118429   \n",
+       "C03_1        0.0  166.058937   8.162449  90.288484   7.655655  63.642081   \n",
+       "C03_2        0.0  180.359529  41.200908  86.240933  48.963521  45.659225   \n",
+       "C04_1        0.0  161.031038  40.035450  75.208474  46.378921  37.164575   \n",
+       "C04_2        0.0  110.061879  99.067986  40.937046  12.905609  44.446037   \n",
+       "C05_1        0.0  148.984471  57.586698  53.911191  59.539912   8.614326   \n",
+       "C05_2        0.0  160.759357  55.402610  63.358692  62.059709  22.435951   \n",
        "\n",
-       "                    6          7          8          9  ...        4086  \\\n",
-       "subject_id                                              ...               \n",
+       "Unnamed: 0       6          7          8          9     ...        4086  \\\n",
        "C01_1       16.638002  35.400345  12.710705  31.302645  ...   97.716552   \n",
        "C01_2        1.758768  53.448428   3.054443  38.169044  ...  240.696817   \n",
        "C02_1       60.441501  32.667529  28.177814  39.863271  ...  324.536773   \n",
@@ -414,8 +388,7 @@
        "C05_1       46.548562  16.633512  28.419032  26.986916  ...   85.416671   \n",
        "C05_2       45.778166  13.606955  41.060837  18.083598  ...  347.020480   \n",
        "\n",
-       "                  4087        4088        4089        4090        4091  \\\n",
-       "subject_id                                                               \n",
+       "Unnamed: 0        4087        4088        4089        4090        4091  \\\n",
        "C01_1       114.776394   67.099198   47.384320   97.479009  149.785267   \n",
        "C01_2       219.388447  240.718694  280.058794  239.461137  208.220358   \n",
        "C02_1       317.472523  331.288106  376.283822  412.076268  377.760042   \n",
@@ -427,8 +400,7 @@
        "C05_1        70.591868  148.288139  146.469909   84.803629  166.218256   \n",
        "C05_2       353.222356  380.710418  377.536252  372.882496  400.269632   \n",
        "\n",
-       "                  4092        4093        4094        4095  \n",
-       "subject_id                                                  \n",
+       "Unnamed: 0        4092        4093        4094        4095  \n",
        "C01_1        65.237339   76.287562  109.274009  603.564931  \n",
        "C01_2       241.678183  365.281105  243.957987  572.808433  \n",
        "C02_1       347.376473  355.744525  521.706493  978.147871  \n",
@@ -443,7 +415,7 @@
        "[10 rows x 4096 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,15 +424,15 @@
     "score = 'accuracy'\n",
     "\n",
     "#this data has been previously processed by airflow\n",
-    "features = pd.read_csv(\"/data/elekin/data/results/handwriting/{}_{}20220905.csv\".format(feature, coefficients)) #TODO automate\n",
-    "features = features.set_index(features.columns[0]).sort_index()\n",
+    "features = pd.read_csv(\"/data/elekin/data/results/handwriting/tmp/{}_{}20220911.csv\".format(feature, coefficients)) #TODO automate\n",
+    "features = features.set_index(features.columns[0]).T.sort_index()\n",
     "print(\"Loaded data from CSV\")\n",
     "features.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -493,18 +465,18 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.array_equal(features.index.values, labels.index.values)"
+    "np.array_equal(features.index.unique().values, labels.index.values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +485,7 @@
        "(53, 1)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +503,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(53, 4096, 1)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.expand_dims(X, axis=2).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +532,7 @@
        "(53, 4096)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,13 +812,7 @@
       "1/1 [==============================] - 0s 7ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
       "Epoch 55/1000\n",
       "1/1 [==============================] - 0s 6ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
-      "Epoch 56/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 56/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
       "Epoch 57/1000\n",
       "1/1 [==============================] - 0s 6ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
@@ -1072,13 +1058,7 @@
       "1/1 [==============================] - 0s 7ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
       "Epoch 175/1000\n",
       "1/1 [==============================] - 0s 6ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
-      "Epoch 176/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 176/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
       "Epoch 177/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
@@ -1331,13 +1311,7 @@
       "1/1 [==============================] - 0s 7ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
       "Epoch 54/1000\n",
       "1/1 [==============================] - 0s 8ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
-      "Epoch 55/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 55/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
       "Epoch 56/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
@@ -1583,13 +1557,7 @@
       "1/1 [==============================] - 0s 8ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
       "Epoch 174/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
-      "Epoch 175/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 175/1000\n",
       "1/1 [==============================] - 0s 8ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
       "Epoch 176/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
@@ -2066,13 +2034,7 @@
       "1/1 [==============================] - 0s 8ms/step - loss: 6.1308e-08 - accuracy: 0.5143 - val_loss: 3.9736e-08 - val_accuracy: 0.3333\n",
       "Epoch 157/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: 6.1308e-08 - accuracy: 0.5143 - val_loss: 3.9736e-08 - val_accuracy: 0.3333\n",
-      "Epoch 158/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 158/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: 6.1308e-08 - accuracy: 0.5143 - val_loss: 3.9736e-08 - val_accuracy: 0.3333\n",
       "Epoch 159/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: 6.1308e-08 - accuracy: 0.5143 - val_loss: 3.9736e-08 - val_accuracy: 0.3333\n",
@@ -2498,13 +2460,7 @@
       "1/1 [==============================] - 0s 9ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
       "Epoch 110/1000\n",
       "1/1 [==============================] - 0s 8ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
-      "Epoch 111/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 111/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
       "Epoch 112/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: nan - accuracy: 0.4857 - val_loss: nan - val_accuracy: 0.6667\n",
@@ -2936,13 +2892,7 @@
       "1/1 [==============================] - 0s 7ms/step - loss: 0.0612 - accuracy: 0.4571 - val_loss: 0.0607 - val_accuracy: 0.4444\n",
       "Epoch 50/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: 0.0607 - accuracy: 0.5143 - val_loss: 0.0600 - val_accuracy: 0.3333\n",
-      "Epoch 51/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 51/1000\n",
       "1/1 [==============================] - 0s 8ms/step - loss: 0.0600 - accuracy: 0.5714 - val_loss: 0.0591 - val_accuracy: 0.3333\n",
       "Epoch 52/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: 0.0591 - accuracy: 0.5429 - val_loss: 0.0579 - val_accuracy: 0.3333\n",
@@ -3300,13 +3250,7 @@
       "1/1 [==============================] - 0s 8ms/step - loss: 0.0072 - accuracy: 0.4286 - val_loss: 0.0071 - val_accuracy: 0.6667\n",
       "Epoch 223/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: 0.0071 - accuracy: 0.3429 - val_loss: 0.0070 - val_accuracy: 0.5556\n",
-      "Epoch 224/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 224/1000\n",
       "1/1 [==============================] - 0s 8ms/step - loss: 0.0070 - accuracy: 0.4857 - val_loss: 0.0069 - val_accuracy: 0.3889\n",
       "Epoch 225/1000\n",
       "1/1 [==============================] - 0s 8ms/step - loss: 0.0069 - accuracy: 0.4857 - val_loss: 0.0068 - val_accuracy: 0.3333\n",
@@ -4141,13 +4085,7 @@
       "1/1 [==============================] - 0s 8ms/step - loss: 0.4425 - accuracy: 0.4857 - val_loss: 0.4403 - val_accuracy: 0.3333\n",
       "Epoch 49/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: 0.4403 - accuracy: 0.5143 - val_loss: 0.4380 - val_accuracy: 0.3333\n",
-      "Epoch 50/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 50/1000\n",
       "1/1 [==============================] - 0s 8ms/step - loss: 0.4380 - accuracy: 0.5143 - val_loss: 0.4358 - val_accuracy: 0.3333\n",
       "Epoch 51/1000\n",
       "1/1 [==============================] - 0s 7ms/step - loss: 0.4358 - accuracy: 0.4571 - val_loss: 0.4336 - val_accuracy: 0.3333\n",
@@ -4687,13 +4625,7 @@
       "1/1 [==============================] - 0s 10ms/step - loss: 6.1308e-08 - accuracy: 0.4857 - val_loss: 3.9736e-08 - val_accuracy: 0.3333\n",
       "Epoch 41/1000\n",
       "1/1 [==============================] - 0s 8ms/step - loss: 6.1308e-08 - accuracy: 0.5143 - val_loss: 3.9736e-08 - val_accuracy: 0.3333\n",
-      "Epoch 42/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 42/1000\n",
       "1/1 [==============================] - 0s 9ms/step - loss: 6.1308e-08 - accuracy: 0.4571 - val_loss: 3.9736e-08 - val_accuracy: 0.3333\n",
       "Epoch 43/1000\n",
       "1/1 [==============================] - 0s 9ms/step - loss: 6.1308e-08 - accuracy: 0.5429 - val_loss: 3.9736e-08 - val_accuracy: 0.3333\n",
@@ -4917,13 +4849,7 @@
       "1/1 [==============================] - 0s 8ms/step - loss: 6.1308e-08 - accuracy: 0.5429 - val_loss: 3.9736e-08 - val_accuracy: 0.3889\n",
       "Epoch 150/1000\n",
       "1/1 [==============================] - 0s 9ms/step - loss: 6.1308e-08 - accuracy: 0.4571 - val_loss: 3.9736e-08 - val_accuracy: 0.3889\n",
-      "Epoch 151/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 151/1000\n",
       "1/1 [==============================] - 0s 8ms/step - loss: 6.1308e-08 - accuracy: 0.4571 - val_loss: 3.9736e-08 - val_accuracy: 0.3889\n",
       "Epoch 152/1000\n",
       "1/1 [==============================] - 0s 8ms/step - loss: 6.1308e-08 - accuracy: 0.5429 - val_loss: 3.9736e-08 - val_accuracy: 0.3889\n",
@@ -5367,13 +5293,7 @@
       "1/1 [==============================] - 0s 9ms/step - loss: 2.3284e-05 - accuracy: 0.5429 - val_loss: 2.0345e-05 - val_accuracy: 0.3889\n",
       "Epoch 105/1000\n",
       "1/1 [==============================] - 0s 9ms/step - loss: 2.0366e-05 - accuracy: 0.5429 - val_loss: 1.7763e-05 - val_accuracy: 0.6667\n",
-      "Epoch 106/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 106/1000\n",
       "1/1 [==============================] - 0s 9ms/step - loss: 1.7784e-05 - accuracy: 0.5429 - val_loss: 1.5487e-05 - val_accuracy: 0.6111\n",
       "Epoch 107/1000\n",
       "1/1 [==============================] - 0s 10ms/step - loss: 1.5509e-05 - accuracy: 0.5429 - val_loss: 1.3490e-05 - val_accuracy: 0.6111\n",
@@ -5595,13 +5515,7 @@
       "1/1 [==============================] - 0s 10ms/step - loss: 6.1536e-08 - accuracy: 0.5143 - val_loss: 3.9945e-08 - val_accuracy: 0.3333\n",
       "Epoch 213/1000\n",
       "1/1 [==============================] - 0s 10ms/step - loss: 6.1516e-08 - accuracy: 0.5714 - val_loss: 3.9927e-08 - val_accuracy: 0.3333\n",
-      "Epoch 214/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 214/1000\n",
       "1/1 [==============================] - 0s 9ms/step - loss: 6.1498e-08 - accuracy: 0.5143 - val_loss: 3.9911e-08 - val_accuracy: 0.3333\n",
       "Epoch 215/1000\n",
       "1/1 [==============================] - 0s 9ms/step - loss: 6.1482e-08 - accuracy: 0.4857 - val_loss: 3.9897e-08 - val_accuracy: 0.3333\n",
@@ -5813,13 +5727,7 @@
       "1/1 [==============================] - 0s 11ms/step - loss: 0.0699 - accuracy: 0.5714 - val_loss: 0.0666 - val_accuracy: 0.3889\n",
       "Epoch 46/1000\n",
       "1/1 [==============================] - 0s 10ms/step - loss: 0.0666 - accuracy: 0.3714 - val_loss: 0.0637 - val_accuracy: 0.3333\n",
-      "Epoch 47/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 47/1000\n",
       "1/1 [==============================] - 0s 11ms/step - loss: 0.0637 - accuracy: 0.4857 - val_loss: 0.0609 - val_accuracy: 0.3889\n",
       "Epoch 48/1000\n",
       "1/1 [==============================] - 0s 11ms/step - loss: 0.0609 - accuracy: 0.4286 - val_loss: 0.0583 - val_accuracy: 0.3889\n",
@@ -6592,13 +6500,7 @@
       "1/1 [==============================] - 0s 13ms/step - loss: 6.1638e-05 - accuracy: 0.4571 - val_loss: 5.6405e-05 - val_accuracy: 0.3333\n",
       "Epoch 151/1000\n",
       "1/1 [==============================] - 0s 13ms/step - loss: 5.6427e-05 - accuracy: 0.4857 - val_loss: 5.1608e-05 - val_accuracy: 0.3333\n",
-      "Epoch 152/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 152/1000\n",
       "1/1 [==============================] - 0s 14ms/step - loss: 5.1629e-05 - accuracy: 0.5429 - val_loss: 4.7194e-05 - val_accuracy: 0.3333\n",
       "Epoch 153/1000\n",
       "1/1 [==============================] - 0s 14ms/step - loss: 4.7215e-05 - accuracy: 0.4571 - val_loss: 4.3135e-05 - val_accuracy: 0.3333\n",
